magiclantern/kustomize/minio-tenant/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage
  namespace: minio-tenant
  labels:
    awesomeness: "super-mega"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /my-bucket/bentoed
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: minio-hl
              servicePort: 9000
          - path: /*
            backend:
              serviceName: minio-hl
              servicePort: 9000
